@@ -176,29 +176,23 @@ public class SpanNearQuery extends SpanQuery implements Cloneable {
   /** Returns true iff <code>o</code> is equal to this. */
   @Override
   public boolean equals(Object o) {
-    if (this == o) return true;
-    if (!(o instanceof SpanNearQuery)) return false;
-
+    if (! super.equals(o)) {
+      return false;
+    }
     final SpanNearQuery spanNearQuery = (SpanNearQuery) o;
 
-    if (inOrder != spanNearQuery.inOrder) return false;
-    if (slop != spanNearQuery.slop) return false;
-    if (!clauses.equals(spanNearQuery.clauses)) return false;
-
-    return getBoost() == spanNearQuery.getBoost();
+    return (inOrder == spanNearQuery.inOrder)
+        && (slop == spanNearQuery.slop)
+        && (collectPayloads == spanNearQuery.collectPayloads)
+        && clauses.equals(spanNearQuery.clauses);
   }
 
   @Override
   public int hashCode() {
-    int result;
-    result = clauses.hashCode();
-    // Mix bits before folding in things like boost, since it could cancel the
-    // last element of clauses.  This particular mix also serves to
-    // differentiate SpanNearQuery hashcodes from others.
-    result ^= (result << 14) | (result >>> 19);  // reversible
-    result += Float.floatToRawIntBits(getBoost());
+    int result = super.hashCode();
+    result ^= clauses.hashCode();
     result += slop;
-    result ^= (inOrder ? 0x99AFD3BD : 0);
-    return result;
+    int fac = 1 + (inOrder ? 8 : 4) + (collectPayloads ? 2 : 0);
+    return fac * result;
   }
 }
